fixes search bar size and z-index of update-your-profile

--- a/frontend/src/components/searchbar/SearchResultsList.css
+++ b/frontend/src/components/searchbar/SearchResultsList.css
@@ -12,5 +12,7 @@
     top: 55px; /* Adjust as needed */
     left: calc(spacing + width-of-SearchBar + spacing);
     z-index: 999; /*Set a high z-index to ensure it's above other elements */
-    margin-left: 670px;
+    margin-left: 505px;
+    width: 450px;
+
 }
